remove reference to docker