@@ -5,7 +5,6 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executors;
 
 // $JAVA_HOME/bin/java --enable-preview -cp target/loom-1.0-SNAPSHOT.jar  fr.umlv.loom.example._8_executor
-// docker run -it --rm --user forax -v /Users/forax:/home/forax -w /home/forax/git/loom-fiber fedora $JAVA_HOME/bin/java --enable-preview -cp target/classes fr.umlv.loom.example._8_executor
 public interface _8_executor {
   private static void simple() throws ExecutionException, InterruptedException {
     try(var executor = Executors.newVirtualThreadPerTaskExecutor()) {
